# Monocular-Depth-Estimation-and-Path-Planning-in-Partially-Known-Environments

./: LICENSE  README.md
path_planning_test/d-star-lite/dstarlite_grid_planning/: custom_map.txt  dstarlite.py  grid.py  main.py  priority_queue.py  utility.py
path_planning_test/d-star-lite/dstarlite_map_planning_v1/: dstarlite.py  grid.py  inflation_layer_test.py  main.py  priority_queue.py  utility.py
path_planning_test/d-star-lite/dstarlite_map_planning_v1/test/: costmap.py
path_planning_test/d-star-lite/dstarlite_map_planning_v2/: dstarlite.py  grid.py  main.py  priority_queue.py
path_planning_test/d-star-lite/dstarlite_map_planning_v2/test/: inflation_layer.py
ros_mono_depth_ws/src/interface/: CMakeLists.txt  package.xml
ros_mono_depth_ws/src/interface/launch/: interface.launch
ros_mono_depth_ws/src/interface/scripts/: interface.py
ros_mono_depth_ws/src/interface/scripts/assets/: interface.kv
ros_mono_depth_ws/src/monocular_depth_estimator/: CMakeLists.txt  package.xml  requirements.txt  setup.py
ros_mono_depth_ws/src/monocular_depth_estimator/config/: config.rviz
ros_mono_depth_ws/src/monocular_depth_estimator/launch/: mono_depth_estimator.launch
ros_mono_depth_ws/src/monocular_depth_estimator/scripts/: depth_estimator.py
ros_mono_depth_ws/src/monocular_depth_estimator/test/: monocular_depth_estimator.py  point_cloud_generator.py
ros_mono_depth_ws/src/monocular_depth_estimator/weights/: midas_v21_small_256.txt
ros_mono_depth_ws/src/perception/: CMakeLists.txt  package.xml
ros_mono_depth_ws/src/perception/config/: mapping.rviz  realsense_viz_config.rviz  rtabmap_viz_config.rviz
ros_mono_depth_ws/src/perception/launch/: localization.launch  realsense_cam.launch  rtabmap.launch  rtabmap_v1.launch  rtabmap_v2.launch  rtabmap_v3.launch
ros_mono_depth_ws/src/perception/scripts/: map_analyzer.py  map_gui.py  map_gui_style.kv  map_viz.py
ros_mono_depth_ws/src/robot_launcher/: .directory  CMakeLists.txt  package.xml
ros_mono_depth_ws/src/robot_launcher/launch/: real_time_system.launch  simulation_system.launch
ros_mono_depth_ws/src/simulator/: CMakeLists.txt  package.xml
ros_mono_depth_ws/src/simulator/launch/: sim_hospital.launch  wheelchair_model.launch
ros_mono_depth_ws/src/simulator/meshes/old/: chair_base.STL  left_back_wheel.STL  left_front_wheel.STL  left_wheel.STL  right_back_wheel.STL  right_front_wheel.STL  right_wheel.STL
ros_mono_depth_ws/src/simulator/scripts/: custom_teleop_keyboard.py  dynamic_obstacles.py  joystick_teleop.py
ros_mono_depth_ws/src/simulator/urdf/: wheelchair.urdf
ros_mono_depth_ws/src/simulator/worlds/: hospital.world
